Add component styles for holder, button, and custom input in Tailwind CSS

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,6 +13,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@layer components {
+  .holder {
+    @apply min-w-[330px] max-w-[740px] mx-auto px-2;
+  }
+  .btn {
+    @apply p-4 rounded-lg transition-all duration-300 text-base;
+  }
+  .custom-input {
+    @apply bg-C_gray-400 text-C_gray-100 p-4 border-black border rounded-lg outline-none;
+  }
+}
+
 body {
   margin: 0;
   padding: 0;
